@@ -1,0 +1,44 @@
+<Project Sdk="Microsoft.NET.Sdk">
+
+  <PropertyGroup>
+    <OutputType>Library</OutputType>
+    <TargetFramework>netstandard2.0</TargetFramework>
+	<RootNamespace>ICD.Connect.Conferencing.Mock</RootNamespace>
+	<AssemblyName>ICD.Connect.Conferencing.Mock</AssemblyName>
+	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+	<Deterministic>true</Deterministic>
+  </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;DEBUG;STANDARD</DefineConstants>
+  </PropertyGroup>
+  
+  <PropertyGroup>
+    <OutputPath>binNetCoreApp\$(Configuration)\</OutputPath>
+    <DefineConstants>TRACE;STANDARD</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="SIMPLSharpLogs\**" />
+    <EmbeddedResource Remove="SIMPLSharpLogs\**" />
+    <None Remove="SIMPLSharpLogs\**" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Compile Remove="ObfuscationSettings.cs" />
+    
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Remove=".gitignore" />
+    <None Remove="ICD.Connect.Conferencing.Mock_SimplSharp.suo" />
+    <None Remove="ICD.Connect.Conferencing.projectinfo" />
+    <None Remove="ICD.SimplSharp.projectinfo" />
+    <None Remove="Properties\ControlSystem.cfg" />
+  </ItemGroup>
+  
+  <ItemGroup>
+	<ProjectReference Include="..\ICD.Connect.Conferencing\ICD.Connect.Conferencing_NetStandard.csproj" />
+  </ItemGroup>
+
+</Project>
