@@ -1,0 +1,9 @@
+﻿using ICD.Connect.Devices;
+
+namespace ICD.Connect.Conferencing.Mock
+{
+	public interface IMockConferencingDeviceSettings : IDeviceSettings
+	{
+
+	}
+}
