@@ -1,0 +1,3 @@
+﻿using ICD.Connect.Settings.Attributes;
+
+[assembly: KrangPlugin]
