@@ -3,3 +3,10 @@ All notable changes to this project will be documented in this file.
 
 The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
 and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).
+
+## [Unreleased]
+
+### Added
+ - ICD.Connect.Conferencing.Mock project, relevant project files
+ - Mock conferencing device + settings, to simulate a conferencing device such as a cisco codec
+ - Mock dialing device control, to simulate a dialer
